--- a/index.css
+++ b/index.css
@@ -52,3 +52,30 @@
     margin: 10px;
     cursor: pointer;
 }
+
+.shimmer-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.shimmer-card{
+    height: 300px;
+    width: 200px;
+    margin: 10px;
+    background-color: #f0f0f0;
+}
+
+.login {
+    padding: 0px 20px;
+    cursor: pointer;
+}
+
+.filter {
+    padding: 20px;
+    display: flex;
+}
+
+.search {
+    padding: 5px;
+    margin: 5px;
+}
