--- a/index.css
+++ b/index.css
@@ -1,90 +1,1 @@
-.header{
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid black;
-}
-
-.logo{
-    width: 200px;
-}
-
-.nav-items{
-    padding: 0px 20px;
-}
-
-.nav-items > ul {
-    display: flex;
-    list-style-type: none;
-    font-size: 24px;
-}
-
-.nav-items > ul > li {
-    padding: 10px;
-    margin: 10px;
-}
-
-.search{
-    padding: 10px;
-}
-
-.res-card{
-    margin: 5px;
-    padding: 5px;
-    width: 200px;
-    background-color: #f0f0f0;
-}
-
-.res-card:hover{
-    cursor: pointer;
-    border: 1px solid black;
-}
-
-.res-logo{
-    width: 100%;
-}
-
-.res-container{
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.filter-btn{
-    margin: 10px;
-    cursor: pointer;
-}
-
-.shimmer-container{
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.shimmer-card{
-    height: 300px;
-    width: 200px;
-    margin: 10px;
-    background-color: #f0f0f0;
-}
-
-.login {
-    padding: 0px 20px;
-    cursor: pointer;
-}
-
-.filter {
-    padding: 20px;
-    display: flex;
-}
-
-.search {
-    padding: 5px;
-    margin: 5px;
-}
-
-.RestaurantMenuLink {
-    text-decoration: none;
-}
-
-.user-card {
-    padding: 10px;
-    border: 1px solid black ;
-}
+@import "tailwindcss";
